# user-cli-rust

./:  README.md  Cargo.toml  README.md  notes.csv  notes.json  notes.md
src/: database.rs  main.rs  models.rs  services.rs
src/mock/: database.rs
src/models/: args.rs  mod.rs  note.rs  user.rs
src/services/: commands.rs  mod.rs  notes.rs  user.rs
