[package]
name = "project1"
version = "0.1.0"
edition = "2021"

[dependencies]
# cli
clap = { version = "4.4.7", features = ["derive"] } 

# serde
serde = { version = "1.0", features = ["derive"] } 

# json
serde_json = "1.0" 

# date and time
chrono = "0.4" 

# csv
csv = "1.2"

# pdf 
genpdf = "=0.2.0"